@@ -1,4 +1,10 @@
 This file lists the incompatible changes between Version 2.x and older versions
+%%%%%%%%%%%%%%%%%%%%%%%%%%%% VERSION 2.10 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+* Specific to the PARI library:
+===============================
+  - renamed buchnarrow -> bnfnarrow
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%% VERSION 2.8 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
   - removed useless function sumnumalt: use sumalt
