@@ -11,6 +11,7 @@
 ; 0, 0, 1], [1, 0, 0; 0, 1, 0; 0, 0, 2], [2, 1, 0; 0, 1, 0; 0, 0, 1], [1, 0,
  0; 0, 2, 0; 0, 0, 1], [2, 0, 0; 0, 1, 0; 0, 0, 1], [1, 0, 0; 0, 1, 0; 0, 0,
  1]]
+[[1, 0, 0; 0, 1, 0; 0, 0, 1], [0]]
   ***   at top-level: bnrL1(bnrinit(bnfini
   ***                 ^--------------------
   *** bnrL1: incorrect type in bnrL1 [subgroup] (t_INT).
@@ -61,8 +62,10 @@
 -1
 1/2
 1
-[4, [2, 2], [[3, 1; 0, 1], [114, 1; 0, 1]]]
-[[1, 0, 0; 0, 1, 0; 0, 0, 1], [0]]
+[4, [2, 2], [[3, 2; 0, 1], [0, -1]~]]
+[4, [2, 2], [[3, 2, 0, -2, 0, 1]~, [2, 2, -1, 1, -1, 0]~]]
+[14, [14], [[3, 1; 0, 1]]]
+[16, [2, 2, 2, 2], [[11, 2; 0, 1], [2, 1; 0, 1], [3, 0; 0, 1], [0, -1]~]]
 [2, 2, 5]
 [1, 2, [1, 0; 0, 1]]
 0
@@ -81,4 +84,4 @@
 0.089805595315917074488389030359505357527 - 0.995959313953112109360633848559
 13482206*I
 [72, [12, 6], [[5, 4; 0, 1], [47, 42; 0, 1]]]
-Total time spent: 39
+Total time spent: 60
