@@ -8,6 +8,8 @@ default(realprecision,38);
 subgrouplist(K)
 subgrouplist(K, 2)
 subgrouplist(K, 2, 1)
+bnrconductor(bnfinit(K),4,Mat(3))
+
 bnrL1(bnrinit(bnfinit(x^2+1),10,1),1);
 setrand(5);bnrL1(bnrinit(bnfinit(y^2+6),1,1),0);
 bnrL1(bnrinit(bnfinit(x),[5,[1]],1));
@@ -70,8 +72,11 @@ chareval(bnr,chi,L[2].gen[2])
 
 bnr=bnrinit(bnfinit(x^2-97),1,1); bnrrootnumber(bnr,[])
 
-bnfnarrow(bnfinit(x^2-460))
-bnrconductor(bnfinit(K),4,Mat(3))
+narrow(T)=bnfnarrow(bnfinit(T));
+narrow(x^2-460)
+narrow(x^6-x^5-12*x^4+5*x^3+23*x^2-6*x-9)
+narrow(x^2-9004)
+narrow(x^2-7980)
 
 \\#1804
 K=bnfinit(y^2-5);
